backend/build_output_5.txt

> Task :compileJava FAILED
D:\spring_boot_project\62dn-project-2026\backend\src\main\java\com\dnproject\platform\config\TestDataLoader.java:55: error: cannot find symbol
                .verificationStatus(VerificationStatus.APPROVED)
                                                      ^
  symbol:   variable APPROVED
  location: class VerificationStatus
1 error

[Incubating] Problems report is available at: file:///D:/spring_boot_project/62dn-project-2026/backend/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  D:\spring_boot_project\62dn-project-2026\backend\src\main\java\com\dnproject\platform\config\TestDataLoader.java:55: error: cannot find symbol
                  .verificationStatus(VerificationStatus.APPROVED)
                                                        ^
    symbol:   variable APPROVED
    location: class VerificationStatus
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 2s
1 actionable task: 1 executed
